--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,20 @@ body {
   }
 }
 
+@keyframes panBackground {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
+}
+
 .marquee-scroll {
   display: inline-block;
   animation: marquee 15s linear infinite;
